--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/detail54/node-study#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.36",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -31,5 +32,9 @@
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1"
   }
 }
