--- a/package.json
+++ b/package.json
@@ -1,46 +1,32 @@
 {
-  "name": "study",
+  "name": "node-study",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "server": "nodemon src/main.js"
-  },
-  "engines": {
-    "node": "16.15.0"
-  },
+  "author": "daehyun <detail54@nate.com>",
+  "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/detail54/node-study.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/detail54/node-study/issues"
   },
   "homepage": "https://github.com/detail54/node-study#readme",
+  "engines": {
+    "node": "16.15.0"
+  },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.36",
-    "@types/supertest": "^2.0.12",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
-    "prettier": "^2.6.2",
-    "supertest": "^6.2.3",
-    "typescript": "^4.7.2"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "multer": "^1.4.5-lts.1",
-    "pug": "^3.0.2"
+    "prettier": "^2.7.0",
+    "typescript": "^4.7.3"
   }
 }
