--- a/packages/chating/package.json
+++ b/packages/chating/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "koa": "^2.13.4",
+    "koa-mount": "^4.0.0",
     "koa-pug": "^5.0.0",
+    "koa-route": "^3.2.0",
+    "koa-static": "^5.0.0",
+    "koa-websocket": "^7.0.0",
     "mongodb": "^4.7.0",
     "nodemon": "^2.0.16",
     "tailwindcss": "^3.1.3"
