feat: connect mongodb

--- a/packages/chating/package.json
+++ b/packages/chating/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "server": "nodemon src/main.js"
   },
+  "engines": {
+    "node": "16.15.0"
+  },
   "dependencies": {
     "koa": "^2.13.4",
     "koa-mount": "^4.0.0",
