--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "commander": "^9.3.0"
+    "commander": "^9.3.0",
+    "dotenv": "^16.0.1"
   }
 }
