--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^9.3.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "octokit": "^1.8.0"
   }
 }
