--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.1",
     "commander": "^9.3.0",
     "dotenv": "^16.0.1",
-    "octokit": "^1.8.0"
+    "octokit": "^1.8.0",
+    "prompts": "^2.4.2"
   }
 }
