--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,7 @@
     "chalk": "^4.1.1",
     "commander": "^9.3.0",
     "dotenv": "^16.0.1",
+    "marked": "^4.0.17",
     "octokit": "^1.8.0",
     "prompts": "^2.4.2"
   }
